// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule attribute-allowed-values contain contextual documentation when attribute is omitted 1`] = `
{
  "description": "Attribute has invalid value.",
  "url": "https://html-validate.org/rules/attribute-allowed-values.html",
}
`;

exports[`rule attribute-allowed-values should contain contextual documentation 1`] = `
{
  "description": "The \`<any>\` element does not allow the attribute \`foo\` to have the value \`"bar"\`.

It must match one of the following:

- \`"spam"\`
- \`"ham"\`
- \`/\\d+/\`",
  "url": "https://html-validate.org/rules/attribute-allowed-values.html",
}
`;

exports[`rule attribute-allowed-values should contain contextual documentation when attribute should be boolean 1`] = `
{
  "description": "The \`<any>\` attribute \`foo\` must be a boolean attribute, e.g. \`<any foo>\`",
  "url": "https://html-validate.org/rules/attribute-allowed-values.html",
}
`;
